Add CI pipeline to build patcher
Modifies the makefile to play nicely with github actions. Notably by surrounding the pushes to env.ld in quotes in the makefile so they are not interpreted as a separate line.

Also removes the infinite loop from the patcher to make it more CI friendly.

MinGW at the time of the patch comes preinstalled at version 8.1.0 on windows-latest. A version check has been added to force the MinGW version as desired by using choco windows package manager.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,14 +12,39 @@ jobs:
     runs-on: windows-latest
     defaults:
       run:
-        shell: msys2 {0}
+        shell: bash
+    env:
+      MINGW_VERSION: 8.1.0
     steps:
       - uses: actions/checkout@v2
-      - uses: msys2/setup-msys2@v2
-        with:
-          msystem: MINGW64
-          update: true
-          install: git mingw-w64-x86_64-toolchain
-      - name: CI-Build
+
+      - name: Check MinGW Version
         run: |
-            mingw32-make all
+          if ! g++ --version | grep $MINGW_VERSION; then
+            choco install mingw --version $MINGW_VERSION -y -f;
+          fi
+
+      - name: Build Patcher
+        run: mingw32-make all
+            
+      - name: Create Draft Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ github.event.inputs.version }}
+          release_name: v${{ github.event.inputs.version }}
+          draft: true
+          prerelease: true
+
+      - name: Upload Patcher exe
+        id: upload-exe
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: FaP.exe
+          asset_name: FaPatcher.exe
+          asset_content_type: application/vnd.microsoft.portable-executable
