--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,5 +46,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: FaP.exe
-          asset_name: FaPatcher.exe
+          asset_name: FaP.exe
           asset_content_type: application/vnd.microsoft.portable-executable
