--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build Patcher
-        run: ./make.sh
+        run: ./make.bat
 
       - name: Create Draft Release
         id: create_release
